--- a/index.html
+++ b/index.html
@@ -1,35 +1,34 @@
+
 <!DOCTYPE html>
 <html lang="es">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>AI Design Platform</title>
-    <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.0.3/dist/tailwind.min.css" rel="stylesheet">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>AI Design Platform</title>
+  <link rel="stylesheet" href="styles.css" />
 </head>
-<body class="bg-gray-100">
-    <header class="text-center py-8">
-        <h1 class="text-4xl font-bold text-blue-600">Bienvenido a AI Design Platform</h1>
-        <p class="mt-4 text-lg text-gray-700">Crea diseños, videos y contenido con inteligencia artificial de manera fácil y rápida.</p>
-    </header>
-    <main class="mt-6">
-        <div class="flex justify-center gap-4">
-            <a href="#" class="px-6 py-3 bg-blue-500 text-white rounded-lg shadow-md hover:bg-blue-600">Explorar Herramientas de IA</a>
-            <a href="#" class="px-6 py-3 bg-gray-700 text-white rounded-lg shadow-md hover:bg-gray-800">Ver Planes y Precios</a>
-        </div>
-        <div class="mt-10 grid grid-cols-1 md:grid-cols-3 gap-6">
-            <div class="p-6 bg-white rounded-lg shadow-md">
-                <h3 class="text-xl font-semibold text-gray-900">Generador de Logos</h3>
-                <p class="text-gray-600 mt-2">Crea logotipos profesionales con IA en segundos.</p>
-            </div>
-            <div class="p-6 bg-white rounded-lg shadow-md">
-                <h3 class="text-xl font-semibold text-gray-900">Editor de Video con IA</h3>
-                <p class="text-gray-600 mt-2">Transforma ideas en videos impactantes.</p>
-            </div>
-            <div class="p-6 bg-white rounded-lg shadow-md">
-                <h3 class="text-xl font-semibold text-gray-900">Escritor de Contenidos</h3>
-                <p class="text-gray-600 mt-2">Genera textos optimizados para SEO al instante.</p>
-            </div>
-        </div>
-    </main>
+<body>
+  <header>
+    <h1>AI Design Platform</h1>
+    <p>Una plataforma todo-en-uno con inteligencia artificial</p>
+  </header>
+  <main>
+    <section class="features">
+      <h2>Funcionalidades IA</h2>
+      <ul>
+        <li>🧠 Generador de Logos</li>
+        <li>✍️ Creador de Contenido</li>
+        <li>🎬 Creador de Video</li>
+        <li>🖼️ Generador de Imágenes desde Texto</li>
+        <li>🎵 Generador de Canciones desde Texto</li>
+        <li>🎨 Colores y Tipografías</li>
+        <li>🔤 Generador de Nombres y Eslogans</li>
+        <li>⚙️ Automatización de Redes Sociales</li>
+      </ul>
+    </section>
+  </main>
+  <footer>
+    <p>&copy; 2025 AI Design Platform</p>
+  </footer>
 </body>
 </html>
